added stereo proj jup nb

--- a/Jupyter_Notebooks/sterographic_projection_lab.ipynb
+++ b/Jupyter_Notebooks/sterographic_projection_lab.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Welcome to Bens mini Xray-Diffraction Lab!\n",
+    "# Welcome to Bens mini Stereographic Projection Lab!\n",
+    "\n",
     "First thing we need to do is install the [PyCrystallography](https://github.com/Shellywell123/PyCrystallography) package into this notebook, checking it is upto date.\n",
     "- to run a cell of code click on it and press [Control + enter]\n",
     "- when a cell is running its line number will look like \"ln [*]\""
@@ -34,7 +35,7 @@
    "metadata": {},
    "source": [
     "## Next we can start our simulation\n",
-    " - 1st import the xray_diffraction module"
+    " - 1st import the geometry module"
    ]
   },
   {
@@ -44,14 +45,17 @@
    "outputs": [],
    "source": [
     "%matplotlib notebook\n",
-    "from PyCrystallography import xray_diffraction"
+    "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "from PyCrystallography.geometry import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " - 2nd step is to set the paramaters for our experiment"
+    " - 2nd step is to choose a crystal shape you would like to model and project\n",
+    "     (here we have chosen the tetrakis)"
    ]
   },
   {
@@ -60,18 +64,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_of_particles = 10\n",
-    "angle = 45 \n",
-    "spread = 10\n",
-    "lattice_shape = 'square'"
+    "fig = plt.figure(0,figsize=[8,8])\n",
+    "ax = fig.add_subplot(111,projection='3d')\n",
+    "faces = tetrakis(ax,4,1)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " - Finally we call the function run_simulation and pass in our paramaters!\n",
-    "(bear in mind the more particles the longer it will take to process)"
+    " - Next we idenify and extroplate the face normalsto points on a sphere of the chosen 3d crystal"
    ]
   },
   {
@@ -80,14 +83,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xray_diffraction.run_simulation(num_of_particles,angle,spread,lattice_shape)"
+    "points=normal_points(ax,faces,5)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Congratulations you just simulated Xray diffraction!"
+    "- Finally we use the projected normal points to greate the stereographic projection in 2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Stereographic_projection(points,5,'dont_save')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Congratulations you just simulated a Stereographic projection of a tetrakis!"
    ]
   },
   {
