--- a/Jupyter_Notebooks/xray_diffraction_lab.ipynb
+++ b/Jupyter_Notebooks/xray_diffraction_lab.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Version: 0.2.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip show PyCrystallography | grep Version"
    ]
@@ -39,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +85,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial Conditions\n",
+      " - 10 particles spread across 10 (x units) at a angle of 45 degrees\n",
+      "\n",
+      "Simulation Outcome\n",
+      " - 6 lattice collision/s, 4 lattice pass/es\n"
+     ]
+    }
+   ],
    "source": [
     "xray_diffraction.run_simulation(num_of_particles,angle,spread,lattice_shape)"
    ]
